plugins/binding/swift/include/TellusimObjCMath.h

typedef struct TSVector2u {
	union {
		struct {
			uint32_t x, y;
		};
		uint32_t v[2];
	};
} TSVector2u;
typedef struct TSVector2f {
	union {
		struct {
			float32_t x, y;
		};
		float32_t v[2];
	};
} TSVector2f;
typedef struct TSVector2d {
	union {
		struct {
			float64_t x, y;
		};
		float64_t v[2];
	};
} TSVector2d;
/*
 */
typedef TSVector2i Vector2i;
typedef TSVector2u Vector2u;
typedef TSVector2f Vector2f;
typedef TSVector2d Vector2d;
/*****************************************************************************\
 *
 * Vector3
 *
\*****************************************************************************/

/*
 */
typedef struct TSVector3i {
	union {
		struct {
			int32_t x, y, z;
		};
		struct {
			TSVector2i xy;
			int32_t xy_z;
		};
		int32_t v[3];
	};
} TSVector3i;
/*
 */
typedef TSVector3i Vector3i;
/*
 */
typedef TSVector4i Vector4i;