plugins/binding/csharp/source/TellusimCSMath.cs

// Copyright (C) 2018-2026, Tellusim Technologies Inc. All rights reserved
// https://tellusim.com/

using System;
using System.Runtime.InteropServices;

/*
 */
namespace Tellusim {
	
	/*****************************************************************************\
	 *
	 * Scalars
	 *
	\*****************************************************************************/
	
	/*
	 */
	public static partial class Base {
		
		/// 32-bit signed integer numbers
		public static int min(int v0, int v1) { return (v0 < v1) ? v0 : v1; }
		public static int max(int v0, int v1) { return (v0 < v1) ? v1 : v0; }
		public static int min(int v0, int v1, int v2) { return (v0 < v1) ? min(v0, v2) : min(v1, v2); }
		public static int max(int v0, int v1, int v2) { return (v0 < v1) ? max(v1, v2) : max(v0, v2); }
		public static int min(int v0, int v1, int v2, int v3) { return (v0 < v1) ? min(v0, v2, v3) : min(v1, v2, v3); }
		public static int max(int v0, int v1, int v2, int v3) { return (v0 < v1) ? max(v1, v2, v3) : max(v0, v2, v3); }
		public static int mid(int v0, int v1, int v2) { return (v0 < v1) ? ((v1 < v2) ? v1 : max(v0, v2)) : ((v0 < v2) ? v0 : max(v1, v2)); }
		public static int clamp(int v, int v0, int v1) { return min(max(v, v0), v1); }
		
		/// 64-bit signed integer numbers
		public static long min(long v0, long v1) { return (v0 < v1) ? v0 : v1; }
		public static long max(long v0, long v1) { return (v0 < v1) ? v1 : v0; }
		public static long min(long v0, long v1, long v2) { return (v0 < v1) ? min(v0, v2) : min(v1, v2); }
		public static long max(long v0, long v1, long v2) { return (v0 < v1) ? max(v1, v2) : max(v0, v2); }
		public static long min(long v0, long v1, long v2, long v3) { return (v0 < v1) ? min(v0, v2, v3) : min(v1, v2, v3); }
		public static long max(long v0, long v1, long v2, long v3) { return (v0 < v1) ? max(v1, v2, v3) : max(v0, v2, v3); }
		public static long mid(long v0, long v1, long v2) { return (v0 < v1) ? ((v1 < v2) ? v1 : max(v0, v2)) : ((v0 < v2) ? v0 : max(v1, v2)); }
		public static long clamp(long v, long v0, long v1) { return min(max(v, v0), v1); }
		
		/// 32-bit unsigned integer numbers
		public static bool ispot(uint x) { return ((x & (x - 1)) == 0); }
		public static bool isaligned(uint a, uint b) { return ispot(b) ? ((a & (b - 1)) == 0) : ((a / b) * b == a); }
		public static uint npot(uint x) { uint ret = 1; while(ret < x) ret += ret; return ret; }
		public static uint log2(uint x) { uint ret = 0; while(x > 1) { x >>= 1; ret++; } return ret; }
		public static uint sqrt(uint x) { uint ret = 0, y = (1 << 30); while(y > x) y >>= 2; while(y != 0) { if(x >= ret + y) { x -= ret + y; ret += y << 1; } ret >>= 1; y >>= 2; } return ret; }
		public static uint pow(uint x, uint y) { uint ret = 1; while(y != 0) { if((y & 1) != 0) ret *= x; x *= x; y >>= 1; } return ret; }
		public static uint align(uint a, uint b) { return ispot(b) ? ((a + b - 1) & ~(b - 1)) : (((a + b - 1) / b) * b); }
		public static uint udiv(uint a, uint b) { return (a + b - 1) / b; }
		
		public static uint min(uint v0, uint v1) { return (v0 < v1) ? v0 : v1; }
		public static uint max(uint v0, uint v1) { return (v0 < v1) ? v1 : v0; }
		public static uint min(uint v0, uint v1, uint v2) { return (v0 < v1) ? min(v0, v2) : min(v1, v2); }
		public static uint max(uint v0, uint v1, uint v2) { return (v0 < v1) ? max(v1, v2) : max(v0, v2); }
		public static uint min(uint v0, uint v1, uint v2, uint v3) { return (v0 < v1) ? min(v0, v2, v3) : min(v1, v2, v3); }
		public static uint max(uint v0, uint v1, uint v2, uint v3) { return (v0 < v1) ? max(v1, v2, v3) : max(v0, v2, v3); }
		public static uint mid(uint v0, uint v1, uint v2) { return (v0 < v1) ? ((v1 < v2) ? v1 : max(v0, v2)) : ((v0 < v2) ? v0 : max(v1, v2)); }
		public static uint clamp(uint v, uint v0, uint v1) { return min(max(v, v0), v1); }
		
		/// 64-bit unsigned integer numbers
		public static bool ispot(ulong x) { return ((x & (x - 1)) == 0); }
		public static bool isaligned(ulong a, ulong b) { return ispot(b) ? ((a & (b - 1)) == 0) : ((a / b) * b == a); }
		public static ulong npot(ulong x) { ulong ret = 1; while(ret < x) ret += ret; return ret; }
		public static ulong log2(ulong x) { ulong ret = 0; while(x > 1) { x >>= 1; ret++; } return ret; }
		public static ulong sqrt(ulong x) { ulong ret = 0, y = (1 << 30); while(y > x) y >>= 2; while(y != 0) { if(x >= ret + y) { x -= ret + y; ret += y << 1; } ret >>= 1; y >>= 2; } return ret; }
		public static ulong pow(ulong x, ulong y) { ulong ret = 1; while(y != 0) { if((y & 1) != 0) ret *= x; x *= x; y >>= 1; } return ret; }
		public static ulong align(ulong a, ulong b) { return ispot(b) ? ((a + b - 1) & ~(b - 1)) : (((a + b - 1) / b) * b); }
		public static ulong udiv(ulong a, ulong b) { return (a + b - 1) / b; }
		
		public static ulong min(ulong v0, ulong v1) { return (v0 < v1) ? v0 : v1; }
		public static ulong max(ulong v0, ulong v1) { return (v0 < v1) ? v1 : v0; }
		public static ulong min(ulong v0, ulong v1, ulong v2) { return (v0 < v1) ? min(v0, v2) : min(v1, v2); }
		public static ulong max(ulong v0, ulong v1, ulong v2) { return (v0 < v1) ? max(v1, v2) : max(v0, v2); }
		public static ulong min(ulong v0, ulong v1, ulong v2, ulong v3) { return (v0 < v1) ? min(v0, v2, v3) : min(v1, v2, v3); }
		public static ulong max(ulong v0, ulong v1, ulong v2, ulong v3) { return (v0 < v1) ? max(v1, v2, v3) : max(v0, v2, v3); }
		public static ulong mid(ulong v0, ulong v1, ulong v2) { return (v0 < v1) ? ((v1 < v2) ? v1 : max(v0, v2)) : ((v0 < v2) ? v0 : max(v1, v2)); }
		public static ulong clamp(ulong v, ulong v0, ulong v1) { return min(max(v, v0), v1); }
		
		/// 32-bit floating point numbers
		public static float min(float v0, float v1) { return (v0 < v1) ? v0 : v1; }
		public static float max(float v0, float v1) { return (v0 < v1) ? v1 : v0; }
		public static float min(float v0, float v1, float v2) { return (v0 < v1) ? min(v0, v2) : min(v1, v2); }
		public static float max(float v0, float v1, float v2) { return (v0 < v1) ? max(v1, v2) : max(v0, v2); }
		public static float min(float v0, float v1, float v2, float v3) { return (v0 < v1) ? min(v0, v2, v3) : min(v1, v2, v3); }
		public static float max(float v0, float v1, float v2, float v3) { return (v0 < v1) ? max(v1, v2, v3) : max(v0, v2, v3); }
		public static float mid(float v0, float v1, float v2) { return (v0 < v1) ? ((v1 < v2) ? v1 : max(v0, v2)) : ((v0 < v2) ? v0 : max(v1, v2)); }
		public static float clamp(float v, float v0, float v1) { return min(max(v, v0), v1); }
		public static float saturate(float v) { return min(max(v, 0.0f), 1.0f); }
		
		public static float lerp(float v0, float v1, float k) { return v0 + (v1 - v0) * k; }
		
		/// 64-bit floating point numbers
		public static double min(double v0, double v1) { return (v0 < v1) ? v0 : v1; }
		public static double max(double v0, double v1) { return (v0 < v1) ? v1 : v0; }
		public static double min(double v0, double v1, double v2) { return (v0 < v1) ? min(v0, v2) : min(v1, v2); }
		public static double max(double v0, double v1, double v2) { return (v0 < v1) ? max(v1, v2) : max(v0, v2); }
		public static double min(double v0, double v1, double v2, double v3) { return (v0 < v1) ? min(v0, v2, v3) : min(v1, v2, v3); }
		public static double max(double v0, double v1, double v2, double v3) { return (v0 < v1) ? max(v1, v2, v3) : max(v0, v2, v3); }
		public static double mid(double v0, double v1, double v2) { return (v0 < v1) ? ((v1 < v2) ? v1 : max(v0, v2)) : ((v0 < v2) ? v0 : max(v1, v2)); }
		public static double clamp(double v, double v0, double v1) { return min(max(v, v0), v1); }
		public static double saturate(double v) { return min(max(v, 0.0), 1.0); }
		
		public static double lerp(double v0, double v1, double k) { return v0 + (v1 - v0) * k; }
		
		/// packed floating point numbers
		public static ushort f32tof16(float f) { return ts_f32tof16(f); }
		public static float f16tof32(ushort h) { return ts_f16tof32(h); }
		public static uint f32tof21(float f) { return ts_f32tof21(f); }
		public static float f21tof32(uint h) { return ts_f21tof32(h); }
		public static uint f32tof24(float f) { return ts_f32tof24(f); }
		public static float f24tof32(uint h) { return ts_f24tof32(h); }
		
		[DllImport(Import)] private static extern ushort ts_f32tof16(float f);
		[DllImport(Import)] private static extern float ts_f16tof32(ushort h);
		[DllImport(Import)] private static extern uint ts_f32tof21(float f);
		[DllImport(Import)] private static extern float ts_f21tof32(uint h);
		[DllImport(Import)] private static extern uint ts_f32tof24(float f);
		[DllImport(Import)] private static extern float ts_f24tof32(uint h);
	}
	
	/*****************************************************************************\
	 *
	 * Vector2
	 *
	\*****************************************************************************/
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct Vector2i {
		
		public Vector2i(int v) { x = v; y = v; }
		public Vector2i(int x, int y) { this.x = x; this.y = y; }
		public Vector2i(in Vector2i v) { x = v.x; y = v.y; }
		public Vector2i(in Vector3i v) { x = v.x; y = v.y; }
		public Vector2i(in Vector4i v) { x = v.x; y = v.y; }
		public Vector2i(in Vector2u v) { x = (int)v.x; y = (int)v.y; }
		public Vector2i(in Vector2f v) { x = (int)v.x; y = (int)v.y; }
		public Vector2i(in Vector2d v) { x = (int)v.x; y = (int)v.y; }
		public Vector2i(in int[] v) { x = v[0]; y = v[1]; }
		
		public static Vector2i operator-(in Vector2i v) { Vector2i ret = new Vector2i(); tsVector2i_neg(ref ret, in v); return ret; }
		
		public static Vector2i operator*(in Vector2i v0, int v1) { Vector2i ret = new Vector2i(); tsVector2i_mul1(ref ret, in v0, v1); return ret; }
		public static Vector2i operator/(in Vector2i v0, int v1) { Vector2i ret = new Vector2i(); tsVector2i_div1(ref ret, in v0, v1); return ret; }
		public static Vector2i operator+(in Vector2i v0, int v1) { Vector2i ret = new Vector2i(); tsVector2i_add1(ref ret, in v0, v1); return ret; }
		public static Vector2i operator-(in Vector2i v0, int v1) { Vector2i ret = new Vector2i(); tsVector2i_sub1(ref ret, in v0, v1); return ret; }
		public static Vector2i operator&(in Vector2i v0, int v1) { Vector2i ret = new Vector2i(); tsVector2i_and1(ref ret, in v0, v1); return ret; }
		public static Vector2i operator|(in Vector2i v0, int v1) { Vector2i ret = new Vector2i(); tsVector2i_or1(ref ret, in v0, v1); return ret; }
		public static Vector2i operator^(in Vector2i v0, int v1) { Vector2i ret = new Vector2i(); tsVector2i_xor1(ref ret, in v0, v1); return ret; }
		public static Vector2i operator<<(in Vector2i v0, int v1) { Vector2i ret = new Vector2i(); tsVector2i_shl1(ref ret, in v0, v1); return ret; }
		public static Vector2i operator>>(in Vector2i v0, int v1) { Vector2i ret = new Vector2i(); tsVector2i_shr1(ref ret, in v0, v1); return ret; }
		
		public static Vector2i operator*(in Vector2i v0, in Vector2i v1) { Vector2i ret = new Vector2i(); tsVector2i_mul(ref ret, in v0, in v1); return ret; }
		public static Vector2i operator/(in Vector2i v0, in Vector2i v1) { Vector2i ret = new Vector2i(); tsVector2i_div(ref ret, in v0, in v1); return ret; }
		public static Vector2i operator+(in Vector2i v0, in Vector2i v1) { Vector2i ret = new Vector2i(); tsVector2i_add(ref ret, in v0, in v1); return ret; }
		public static Vector2i operator-(in Vector2i v0, in Vector2i v1) { Vector2i ret = new Vector2i(); tsVector2i_sub(ref ret, in v0, in v1); return ret; }
		public static Vector2i operator&(in Vector2i v0, in Vector2i v1) { Vector2i ret = new Vector2i(); tsVector2i_and(ref ret, in v0, in v1); return ret; }
		public static Vector2i operator|(in Vector2i v0, in Vector2i v1) { Vector2i ret = new Vector2i(); tsVector2i_or(ref ret, in v0, in v1); return ret; }
		public static Vector2i operator^(in Vector2i v0, in Vector2i v1) { Vector2i ret = new Vector2i(); tsVector2i_xor(ref ret, in v0, in v1); return ret; }
